# multiplication-trainer

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  game.js  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiplication-trainer.desktop  multiplication-trainer.pro  scoreform.cpp  scoreform.h  scoreform.ui
qtc_packaging/debian_fremantle/: README  changelog  control  copyright  rules
